2006-06-29  DJ Delorie  <dj@redhat.com>

	* readelf.c (process_section_headers): Add H8/300 support.

2006-06-23  Richard Sandiford  <richard@codesourcery.com>

	* objcopy.c (localize_hidden): New variable.
	(OPTION_LOCALIZE_HIDDEN): New command_line_switch value.
	(copy_options): Add --localize-hidden.
	(copy_usage): Mention --localize-hidden.
	(is_hidden_symbol): New function.
	(filter_symbols): Handle localize_hidden.
	(copy_object): Call filter_symbols if localize_hidden.
	(copy_main): Handle OPTION_LOCALIZE_HIDDEN.
	* doc/binutils.texi (--localize-hidden): Document new option.

2006-06-23  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.am (ar_DEPENDENCIES, ranlib_DEPENDENCIES)
	(dlltool_DEPENDENCIES, windres_DEPENDENCIES): Remove @LEXLIB@.
	* Makefile.in: Regenerate.

2006-06-23  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am (*_DEPENDENCIES): Add missing dependencies.
	* Makefile.in: Regenerate.

2006-06-07  Joseph S. Myers  <joseph@codesourcery.com>

	* po/Make-in (pdf, ps): New dummy targets.

2006-06-05  Daniel Jacobowitz  <dan@codesourcery.com>

	* po/Make-in (top_builddir): Define.

2006-06-05  Alan Modra  <amodra@bigpond.net.au>

	* config.in: Regenerate.

2006-06-02  Joseph S. Myers  <joseph@codesourcery.com>

	* doc/Makefile.am (TEXI2DVI): Define.
	* doc/Makefile.in: Regenerate.

2006-05-31  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.am: Replace INTLLIBS with LIBINTL everywhere.  Add
	DEPENDENCIES variables for every program.
	(INTLLIBS): Remove.
	(INCLUDES): Use @INCINTL@.
	* acinclude.m4: Include new gettext macros.
	* configure.in: Use ZW_GNU_GETTEXT_SISTER_DIR and AM_PO_SUBDIRS.
	Remove local code for po/Makefile.
	* Makefile.in, configure, doc/Makefile.in: Regenerated.

2006-05-30  Nick Clifton  <nickc@redhat.com>

	* po/es.po: Updated Spanish translation.

2006-05-25  J"orn Rennecke <joern.rennecke@st.com>

	* MAINTAINERS: Update my email address.

2006-05-24  Nick Clifton  <nickc@redhat.com>
